src/_forms.scss
@import "bootstrap-sass/assets/stylesheets/bootstrap/forms";

label {
	color: rgba($primary, .4);
	font-size: 11px;
	font-weight: 400;
	margin-bottom: 3px;
}

.form-control {
	box-shadow: none;
	padding: 20px;

	&:focus {
		box-shadow: none;
	}

	&[disabled]:focus,
	&[readonly]:focus {
		border-color: $input-border;
	}
}

.form-control-borderless {
	border: 0;
	color: rgba($primary, .8);
	outline: 0;
}

.help-block {
	color: rgba($secondary, .4);
	font-size: 11px;
	margin-top: 2px;
}

.has-success,
.has-warning,
.has-error {
  .form-control:focus {
  	box-shadow: none;
  }
}

.has-success .help-block .primary {
	color: $state-success-text;
}

.has-warning .help-block .primary {
	color: $state-warning-text;
}

.has-error .help-block .primary {
	color: $state-danger-text;
}

